# fsr_husky

./: README.md  fsr_husky.rosinstall
fsr_husky_arm_driver/: CMakeLists.txt  package.xml
fsr_husky_arm_driver/src/: fsr_husky_arm_node.cc  jrk_driver.cc  jrk_driver.h  nanotec_driver.cc  nanotec_driver.h
fsr_husky_bringup/: CMakeLists.txt  package.xml
fsr_husky_bringup/controllers/: arm_controllers.yaml  controllers.yaml
fsr_husky_bringup/launch/: camera-husky.launch  cameras_test.launch  fsr_husky.launch  fsr_husky_field_test.launch  fsr_husky_mine_detection.launch  global_localization.launch  husky_teleop.launch  laser_test.launch  localization-nogps.launch  localization-old.launch  localization.launch  localization_nogps.launch  navigation.launch  navigation_map.launch  navigation_simple.launch  navigation_slam.launch  pointcloud_generator-nofilter.launch  pointcloud_generator.launch  sweep.launch
fsr_husky_bringup/launch/includes/: move_base.launch
fsr_husky_bringup/launch/test/: arm_test.launch  controllers.launch  global_localization.launch  laser_test.launch  ptu_test.launch  tilt.launch
fsr_husky_bringup/rules/: README  husky.rules
fsr_husky_bringup/scripts/: install  launch  roscore.sh  roslaunch.sh
fsr_husky_bringup/settings/: global_localization.yaml  test_minefield.yaml
fsr_husky_bringup/settings/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_arm.yaml
fsr_husky_bringup/settings/navigation_map/: local_costmap_params.yaml
fsr_husky_bringup/settings/navigation_simple/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
fsr_husky_bringup/settings/odom_navigation_parameters/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  params_costmap2d.yaml
fsr_husky_data_viewer/: CMakeLists.txt  package.xml
fsr_husky_data_viewer/src/: metal_detector_viewer_node.cpp  metal_detector_viewer_node.cpp.ori  metal_detector_viewer_node_v0.1.cpp  metal_detector_viewer_node_v0.2.cpp  metal_detector_viewer_node_v0.3_pcl.cpp
fsr_husky_description/: CMakeLists.txt  description.rviz  package.xml
fsr_husky_description/launch/: description.launch  description_demining.launch  description_mine_detection.launch
fsr_husky_description/models/arm/: arm_axel_link.STL  arm_base_link.STL  lower_arm_link.STL  metal_detector_antenna_link.STL  metal_detector_arm_link.STL  upper_arm_link.STL
fsr_husky_description/models/fsr_husky_parts/: sicklms100-newaxis.dae
fsr_husky_description/models/husky_parts/: base_link.stl
fsr_husky_description/scripts/: dynamixel_joint_state_publisher.py
fsr_husky_description/src/: joint_state_publisher.cpp  tilt_joint_state_publisher.cpp
fsr_husky_description/urdf/: fsr_husky.urdf.xacro  fsr_husky_demining.urdf.xacro  fsr_husky_mine_detection.urdf.xacro
fsr_husky_description/urdf/arm/: fsr_husky_arm.urdf.xacro
fsr_husky_description/urdf/parts/: alfa_tube2h.urdf.xacro  (+6 more)
fsr_husky_driver/: CMakeLists.txt  package.xml
fsr_husky_driver/action/: Goto.action  laser_tilt.action
fsr_husky_driver/settings/: tilt.yaml
fsr_husky_driver/src/: pointcloud_generator.cpp
fsr_husky_driver/src/mine_clearance_arm/: fsr_husky_arm_node.cc  fsr_husky_arm_node_old.cc  fsr_husky_arm_node_v0.cc  fsr_husky_arm_node_v1.cc  home_node.cpp  jrk_driver.cc  nanotec_driver.cc  nanotec_driver.h  sweep_node.cpp  sweep_node.cpp.autosave  sweep_node_v0.cpp  sweep_node_v0.cpp.ori  sweep_node_v2.cpp
fsr_husky_driver/src/pointcloud_generator/: cloud_assembler.cpp  cloud_assembler_v0.cpp  laser_tilt_action_server.cpp  tilt_continuous_operation_client.cpp
fsr_husky_gazebo/: CMakeLists.txt  package.xml
fsr_husky_gazebo/controllers/: arm_control.yaml  arm_controllers.yaml  controllers.yaml  ptu_d46_control.yaml
fsr_husky_gazebo/launch/: fsr_husky.launch  fsr_husky_empty_world.launch  fsr_husky_mine_detection.launch  fsr_husky_mine_detection.urdf.gazebo.launch  scenario1.launch  world.launch
fsr_husky_gazebo/src/: arm_controller.cpp
fsr_husky_gazebo_plugins/: CMakeLists.txt  package.xml
fsr_husky_gazebo_plugins/src/: mimic_plugin.cpp
fsr_husky_metal_virtual_cloud/: CMakeLists.txt  CMakeLists.txt.user.bf2f8c8  package.xml
fsr_husky_metal_virtual_cloud/launch/: fsr_husky_mines_detection.launch
fsr_husky_metal_virtual_cloud/src/: fsr_husky_convert_mines_rviz.cpp  fsr_husky_mine_sound.cpp  fsr_husky_mines_to_text.cpp
fsr_husky_minefield_static_publisher/: CMakeLists.txt  package.xml
fsr_husky_minefield_static_publisher/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
fsr_husky_minefield_static_publisher/launch/: fsr_husky_minefield_pub.launch
fsr_husky_minefield_static_publisher/settings/: minefield.yaml
fsr_husky_minefield_static_publisher/src/: minefield_static_tf_publisher.cpp
fsr_husky_moveit/: .setup_assistant  CMakeLists.txt  package.xml
fsr_husky_moveit/config/: controllers.yaml  fake_controllers.yaml  husky.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  point_cloud.yaml
fsr_husky_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  husky_moveit_controller_manager.launch.xml  husky_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fsr_husky_navigation/: CMakeLists.txt  package.xml
fsr_husky_navigation/launch/: fsr_husky_navigation.launch
fsr_husky_navigation/src/: fsr_husky_dynamic_reconfigure.cpp  fsr_husky_navigation.cpp
fsr_husky_robot/: CMakeLists.txt  package.xml
fsr_husky_teleop/: CMakeLists.txt  package.xml
fsr_husky_teleop/launch/: full_teleop.launch  xbox360_teleop.launch
fsr_husky_teleop/src/: joystick_teleop.cpp  joystick_teleop_deprecated.cpp
odo_covariance/: CMakeLists.txt  package.xml
odo_covariance/src/: odo_covariance.cpp
(+7 files in other folders)
